update phase 2 and reached milestone 2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Console</title>
+    <meta name="description" content="Space Console — AI-first tooling to automate and operate reliable data pipelines." />
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Space Console" />
+    <meta property="og:title" content="Space Console — AI-first data pipeline automation" />
+    <meta property="og:description" content="AI-first tooling to automate and operate reliable data pipelines." />
+    <meta property="og:type" content="website" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Space Console — AI-first data pipeline automation" />
+    <meta name="twitter:description" content="AI-first tooling to automate and operate reliable data pipelines." />
+    <!-- canonical -->
+    <link rel="canonical" href="https://space-console.com/" />
+    <!-- Google Fonts: Inter -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Tiny SVG data-URI favicon (keeps site image-free) -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23111111'/%3E%3Ctext x='50' y='55' font-size='46' fill='%23ffffff' font-family='Inter, Arial, sans-serif' text-anchor='middle'%3ESC%3C/text%3E%3C/svg%3E">
   </head>
   <body>
     <div id="root"></div>
